# horobot_aiogram3

./: pyproject.toml
bot/: __main__.py
bot/commands/: __init__.py  command_list.py  start.py
bot/database/: __init__.py  engine.py  horoscope.py  users.py
bot/filters/: __init__.py  time_periods.py  zodiac_signs.py
bot/handlers/: __init__.py  change_zodiac_sign.py  horoscope_daily.py  horoscope_tomorrow.py  horoscope_weekly.py  read_any_horoscope.py  set_zodiac_sign.py
bot/keyboards/: __init__.py  start.py  time_periods.py  zodiac_signs.py
bot/middlewares/: __init__.py  user_check.py
bot/parsers/: __init__.py  horoscope.py
bot/schedulers/: __init__.py  database_update.py  user_notification.py
bot/states/: __init__.py  change_zodiac_sign.py  read_any_horoscope.py  set_zodiac_sign.py
